# flask-blueprints

./: LICENSE  Makefile  README.md  pyproject.toml
src/flask-register-blueprints/: __init__.py
