[project]
name = "flask-blueprints"
version = "0.0.6"
authors = [
  { name="Damien Bezborodov", email="dbezborodov@gmail.com" },
]
description = "Import and register all Flask Blueprints (including nested) from a package directory."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/bezborodow/flask-blueprints"
"Bug Tracker" = "https://github.com/bezborodow/flask-blueprints/issues"
